# 311-Service-Request-Modelling

./: .gitignore  README.md  pyproject.toml
app/backend/: Dockerfile  main.py  requirements.txt
app/backend/artifacts/: forecast_cache.csv
app/backend/routers/: forecasts.py  neighborhoods.py
app/backend/schemas/: models.py
app/frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
app/frontend/.next/: _events.json
app/frontend/app/: globals.css  layout.tsx  page.tsx
app/frontend/app/dashboard/: page.tsx
app/frontend/app/results/: page.tsx
app/frontend/components/: ForecastChart.tsx  NeighborhoodMap.tsx  ResultsExplorer.tsx  ServiceTypeSelector.tsx  TabNav.tsx
app/frontend/lib/: api.ts  model-results.ts
app/frontend/types/: index.ts
data/: README.md
models/: README.md
models/bayesian/: bayesian_model.R  model.stan
models/time_series/: arima.py  utils.py
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_baseline_time_series.ipynb  03_time_series.ipynb  04_bayesian.ipynb  04_bayesian_setup.ipynb  05_bayesian_model.rmd  06_training_analysis.ipynb
report/: README.md
results/metrics/: brms_grid_search.csv  brms_grid_search_v1.csv  brms_grid_search_v2.csv  brms_grid_search_v3.csv  dispersion.csv
scripts/utility/: preprocessing.py  scrape.py
