[project]
name = "311-service-request-modelling"
version = "0.1.0"
description = "311 Service Request Modelling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "click==8.3.1",
    "fastapi==0.129.0",
    "h11==0.16.0",
    "httptools==0.7.1",
    "httpx>=0.28.1",
    "idna==3.11",
    "pandas>=2.3.3",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "starlette==0.52.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn[standard]==0.41.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==16.0",
]

[project.optional-dependencies]
dev = []

[dependency-groups]
dev = []
