[project]
name = "311-service-request-modelling"
version = "0.1.0"
description = "311 Service Request Modelling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "click==8.3.1",
    "fastparquet>=2025.12.0",
    "httpx>=0.28.1",
    "idna==3.11",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "polars>=1.39.3",
    "pyarrow>=18.0.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "seaborn>=0.13.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
]

[project.optional-dependencies]
dev = []

[dependency-groups]
dev = []
